<resources>
    <string name="app_name">Pseudo</string>

     <string name="unknown">Unknown</string>
    <string name="image_type">image/*</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Splash</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_get_number">Get Number</string>
    <string name="drawer_item_recharge_credits">Recharge Credits</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_sign_out">Sing Out</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <!-- Fragment Sign in / Sign up-->
    <string name="sl_et_email_hint">Email</string>
    <string name="sl_et_password_hint">Password</string>
    <string name="sr_et_confirm_password_hint">Confirm Password</string>
    <string name="sl_btn_sign_in_text">SIGN IN</string>
    <string name="sr_btn_sign_up_text">SIGN UP</string>
    <string name="sl_btn_sign_up_text">Don’t have an account? Sign Up</string>

    <!-- Fragment Settings-->
    <string name="ss_tv_pin_text">Pin protection</string>
    <string name="ss_tv_notification_text">Notifications</string>
    <string name="ss_tv_changes_text">Changes</string>
    <string name="ss_btn_block_text">BLOCK NUMBER</string>
    <string name="ss_btn_password_text">CHANGE PASSWORD</string>

    <!-- Dialog Settings-->
    <string name="ss_dialog_title">Change password</string>
    <string name="ss_et_dialog_new_pass_hint">New account password</string>
    <string name="ss_et_dialog_confirm_hint">Confirm new password</string>
    <string name="ss_btn_dialog_cancel">CANCEL</string>
    <string name="ss_btn_dialog_submit">SUBMIT</string>

    <!-- Fragment Number-->
    <string name="fn_tv_header">YOU HAVE 20 CREDITS AVAILABLE NOW</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>

    <!-- Dialog Add Friend -->
    <string name="cf_dialog_title">Add friend</string>
    <string name="cf_dialod_hint_name">Name</string>
    <string name="cf_dialog_hint_number">Phone number</string>

    <!--Contacts Item-->
    <string name="cf_first_name">First_Name_Last Name_Long_Name</string>


    <!--Contacts Tool Bar-->
    <string name="tb_search_label">Search contacts</string>

    <!--Chat Item-->

    <string name="test_phone_number">+12123334444</string>
    <string name="test_timedate">June 11 12:35</string>
    <string name="test_chat_message">Hi, how are you?...</string>
    <string name="ci_view_details">View details</string>
    <string name="test_receiver_details">to Sofia +12125556666</string>
    <string name="avatar">Avatar</string>
    <string name="options_icon">Options</string>
    <string name="reply_icon">Reply</string>


    <!--View Contact Activity-->
    <string name="avc_default_name">Default Name</string>
    <string name="avc_button_change">CHANGE</string>


    <string name="register">Register</string>
    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_accept">Accept</string>

    <string name="add_new_number_hint">Enter number</string>


    <!--Alert Dialog deleteList phone number-->
    <string name="alert_delete_pn_title">Delete phone number</string>
    <string name="alert_delete_pn_message">Do you wish to delete this phone number?</string>
    <string name="alert_delete_pn_ok">OK</string>
    <string name="alert_delete_pn_cancel">Cancel</string>
    <string name="add_number">add new number</string>

     <string name="compose_message_hint">Compose message</string>
    <string name="message_send">Send</string>
    <string name="date_format">MMM dd HH:mm</string>
    <string name="get_number">GET</string>
    <string name="buy_number">Buy</string>
    <string name="number_price">Price</string>
    <string name="buy">BUY</string>


    <!--TOAST MESSAGES-->
    <string name="number_cannot_be_empty">Phone numbers cannot be empty</string>
    <string name="number_containes_errors">Phone numbers contain errors</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="connetcion_problems">"Connection problems "</string>
    <string name="check_contact_phone">Failure. Check contact\'s phone number.</string>
    <string name="error_sending_message">Error sending message</string>
    <string name="buy_number_to_start">Buy a number to start a chat</string>
    <string name="network_problem">Network Problem</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="success">Success!</string>
    <string name="check_credits_balance">Failure. Check your credits balance.</string>
    <string name="check_another_number">Failure. Check another number.</string>
    <string name="try_again">Error! Pleasy try again.</string>
    <string name="retry">Retry</string>
    <string name="CREDITS">" CREDITS"</string>
    <string name="failure_recharging_credits">Failure recharging credits</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_must_be_six_simbols_long">Password must be at least 6 symbols long</string>
    <string name="password_should_have_only_az_09">Password can only contain numbers and English letters</string>
    <string name="not_an_email">Not a valid e-mail</string>
    <string name="enter_valid_data">Please enter valid data</string>

    <!--TITLES-->
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="numbers">Numbers</string>
    <string name="buy_a_number">Purchase number</string>
    <string name="countries">Countries</string>
    <string name="available_numbers">Available numbers</string>
    <string name="add_profile">Add Profile</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="credits_available">AVAILABLE</string>
    <string name="no_chats">NO CHATS FOUND</string>
    <string name="no_contacts">NO CONTACTS FOUND</string>
    <string name="buy_credits_dialog_title">Buy Credits</string>
    <string name="edit_contact">Edit contact</string>
    <string name="remove_contact">Remove contact</string>



    <string name="block_number">Block Number</string>
    <string name="Success">Success</string>
    <string name="failed">Failed</string>
    <string name="chat_title">Chat</string>
    <string name="_credits">" credits"</string>
    <string name="loading">Loading...</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="do_you_want_to_delete">"Do you really want to delete "</string>
    <string name="deleting_contact">Deleting contact</string>
    <string name="user_exists">User already exists</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="current_password">Current Password</string>
    <string name="user_created">User created</string>
    <string name="user_already_ecists">User already exists</string>
    <string name="wrong_user_or_pass">Wrong user or password</string>
    <string name="delete_chats">Delete Chats</string>
    <string name="voice_message">Voice message</string>
    <string name="record_void_message">Record Voice Message</string>
    <string name="start_recording">Start recording ...</string>
    <string name="recording">"Recording: "</string>
    <string name="seconds">seconds</string>
    <string name="recorded">Recorded.</string>
    <string name="recording_starts">Recording starts in</string>
    <string name="sec">" sec"</string>
    <string name="add_contact">Add contact</string>


</resources>
