<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:showDividers="none">


    <ImageView
        android:id="@+id/ivChatAvatar"
        style="@style/SChatItemEVAvatar"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/avatar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvChatItemSenderName"
                style="@style/SChatItemTVName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cont_first_name" />

            <TextView
                android:id="@+id/tvChatItemSenderNumber"
                style="@style/SChatItemTVNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/test_phone_number" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvChatItemReceiverDetails"
            style="@style/SChatItemTVNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_receiver_details" />

        <TextView
            android:id="@+id/tvChatItemMessagePreview"
            style="@style/SChatItemTVMessagePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_chat_message" />

        <LinearLayout
            style="@style/SChatItemLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvChatItemTimedate"
                style="@style/SChatItemTVTimedate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/test_timedate" />

            <TextView
                android:id="@+id/tvChatItemViewDetails"
                style="@style/SChatItemTVViewDetails"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal|bottom"
                android:text="@string/ci_view_details" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView

            android:id="@+id/ivChatItemOptions"
            style="@style/SChatItemIcons"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:contentDescription="@string/options_icon"
            android:cropToPadding="true"
            android:src="@drawable/ic_action_overflow" />


        <ImageView

            android:id="@+id/ivChatItemReply"
            style="@style/SChatItemIcons"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/reply_icon"
            android:src="@drawable/ic_reply" />
    </LinearLayout>


</LinearLayout>