<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:background="@drawable/selector_chatlist">


    <ImageView
            android:id="@+id/ivChatAvatar"
            style="@style/SChatsItemEVAvatar"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/avatar"/>


    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical"
            android:padding="8dp"
            >

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="1">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:id="@+id/tvChatCompanion" style="@style/SChatsItemTVName" android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tvChatItemTimedate"
                    style="@style/SChatsItemTVTimedate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_timedate"/>

        </LinearLayout>

        <TextView
                android:id="@+id/tvChatItemSenderNumber"
                style="@style/SChatsItemTVNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_phone_number"/>
        <TextView
                android:id="@+id/tvChatItemReceiverDetails"
                style="@style/SChatsItemTVNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_receiver_details"/>

        <TextView
                android:id="@+id/tvChatItemMessagePreview"
                style="@style/SChatsItemTVMessagePreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/some_random_chat_text"/>

        <LinearLayout
                style="@style/SChatsItemLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>


</LinearLayout>